# LLVMProjects

SDL/: CMakeLists.txt  README.md  app.c  flake.nix  main.c  sim.h  simulator.c
SDL/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
SDL/.direnv/flake-inputs/: xnkkdg2n6nyhrvy3gxb8yhz2d5s42g1h-source
